# stock-exchange-sim-core

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
migrations/: 20250915071949_create_users.sql  20250915095340_change_users_columns.sql  20250916135438_create_transations.sql  20250917094648_create_holdings.sql
proto/: pricefeed.proto
src/: config.rs  errors.rs  main.rs  security.rs  security_tests.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/grpc/: mod.rs
src/models/: holding.rs  mod.rs  transaction.rs  user.rs
src/repository/: holdings_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs
src/routes/: auth.rs  balance.rs  holdings.rs  mod.rs  transactions.rs
src/web/: mod.rs  routes_auth.rs
src/ws/: handler.rs
