[package]
name = "stock-exchange-sim-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# Axum web framework
axum = { version = "0.8.4", features = ["ws"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database + Postgres
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
] }

# Tracing + logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# UUIDs + time handling
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0.99"

dotenvy = "0.15"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rust_decimal = "1.38.0"
redis = { version = "0.32.5", features = ["tokio-comp"] }
bb8 = "0.9.0"
bb8-redis = "0.24.0"
bigdecimal = { version = "0.4.8", features = ["serde-json"] }
rand = "0.9.2"

tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"

[build-dependencies]
tonic-build = "*"
tonic-prost-build = "*"